--- a/package.json
+++ b/package.json
@@ -1,26 +1,36 @@
 {
-  "name": "meme-generator",
+  "name": "meme-creator",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "watch": "babel src -d dist --presets=es2015 -ws",
-    "build": "rm -rf dist && babel src -d dist --presets=es2015",
-    "serve": "http-server",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "webpack": "webpack"
+    "webpack": "webpack",
+    "watch": "webpack-dev-server"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-preset-env": "^1.7.0",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-preset-env": "^1.4.0",
     "babel-preset-es2015": "^6.24.1",
-    "concurrently": "^3.6.1",
-    "http-server": "^0.11.1",
-    "webpack": "^4.16.5",
-    "webpack-cli": "^3.1.0"
+    "clean-webpack-plugin": "^0.1.16",
+    "css-loader": "^0.28.1",
+    "dotenv": "^4.0.0",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.11.1",
+    "img-loader": "^2.0.0",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.3",
+    "purifycss-webpack": "^0.6.2",
+    "style-loader": "^0.17.0",
+    "url-loader": "^0.5.8",
+    "webpack": "^2.5.1",
+    "webpack-dev-server": "^2.4.5"
+  },
+  "dependencies": {
+    "bootstrap": "^3.3.7",
+    "jquery": "^3.2.1"
   }
 }
